--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,76 @@
+:root{
+  --main-bg-color:#743eab;
+}
+html{
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+}
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #e9ecef;
+/* So the width will be 100% + 17px */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+}
+
+.btn-custom{
+  border-color: var(--main-bg-color);
+  background-color: #743eab;;
+  color:#fff;
+}
+.btn-custom:focus{
+  box-shadow: none;
+}
+
+input[type="text"], input[type="email"], input[type='password'],textarea[type='text']{
+  background-color : #d1d1d1; 
+
+}
+
+.bg-custom{
+  background-color:var(--main-bg-color);
+  /*font-weight: bold;*/
+}
+.btn-outline-custom{
+  border-color:var(--main-bg-color);
+  background: white;
+  color:var(--main-bg-color);
+}
+
+.btn-outline-custom:hover{
+  border-color:var(--main-bg-color);
+  background: var(--main-bg-color);
+  color:white;
+}
+span:hover{
+  text-decoration:none;
 }
